# work_activity_agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  live-llm.yml
configs/: default.yaml  domain_rules.yaml  models.cloud.yaml  models.local.yaml  models.yaml
configs/prompts/: classify_activity.md  report_summary.md  task_relevance.md  vision_describe.md
docs/: architecture.md  manifest.md  manual_review_required.md  prompts.md  runbook.md  tech_task.md
docs/adr/: 0001-langgraph.md  0002-litellm.md  0003-redaction-before-vision.md
examples/: README.md
examples/sample_input/: manifest.yaml
examples/sample_output/: employee_developer_1.json  employee_developer_1.md  project_client_crm.md  screenshots_table.md
fixtures/: README.md
fixtures/screenshots/: manifest.yaml
mocks/: banking_test.html  email_with_pii.html  figma_static.html  private_chat.html  slack_chat.html
src/work_activity_agent/: __init__.py  __main__.py
src/work_activity_agent/application/: __init__.py  graph.py  state.py
src/work_activity_agent/application/nodes/: __init__.py  classifier.py  collector.py  image_redaction.py  ocr_signals.py  relevance.py  reports.py  scoring.py  timeline.py  vision.py
src/work_activity_agent/application/services/: __init__.py  domain_classifier.py  evidence_builder.py  risk_calculator.py  timeline_grouper.py  work_activity_calculator.py
src/work_activity_agent/config/: __init__.py  container.py  settings.py
src/work_activity_agent/domain/: __init__.py  enums.py  errors.py
src/work_activity_agent/domain/models/: __init__.py  _validators.py  classification.py  ocr_signals.py  productivity.py  reports.py  risk.py  screenshot.py  vision.py
src/work_activity_agent/domain/ports/: __init__.py  image_redactor.py  llm_provider.py  manifest_loader.py  prompt_loader.py  report_sink.py  storage.py  text_redactor.py
src/work_activity_agent/infrastructure/: __init__.py
src/work_activity_agent/infrastructure/llm/: __init__.py  fake_provider.py  litellm_provider.py  retry.py
src/work_activity_agent/infrastructure/observability/: __init__.py  logging.py
src/work_activity_agent/infrastructure/prompts/: __init__.py  filesystem_loader.py
src/work_activity_agent/infrastructure/redaction/: __init__.py  noop_redactor.py  presidio_image_redactor.py  regex_text_redactor.py
src/work_activity_agent/infrastructure/reports/: __init__.py  json_sink.py  markdown_sink.py
src/work_activity_agent/infrastructure/storage/: __init__.py  local_fs.py  manifest_yaml.py
src/work_activity_agent/presentation/: cli.py
tests/: conftest.py
tests/integration/: test_graph_happy_path.py  test_graph_timeline.py  test_graph_with_risks.py
tests/unit/: test_smoke.py
tests/unit/application/nodes/: test_collector_captured_at.py  test_image_redaction_strict.py  test_timeline_node.py
tests/unit/application/services/: test_domain_classifier.py  test_evidence_builder.py  test_risk_calculator.py  test_timeline_grouper.py  test_timeline_grouper_properties.py  test_work_activity_calculator.py
tests/unit/config/: test_settings.py
tests/unit/domain/: test_classification.py  test_enums.py  test_errors.py  test_ports.py  test_productivity.py  test_reports.py  test_risk.py  test_screenshot.py  test_vision.py
tests/unit/infrastructure/llm/: test_budget_stop.py  test_fake_provider.py
tests/unit/infrastructure/observability/: test_logging.py
tests/unit/infrastructure/prompts/: test_filesystem_loader.py
tests/unit/presentation/: test_cli.py
tools/: capture_html_mocks.py  capture_real_web.py  diagnose-docker-gpu.ps1  generate_placeholder_screenshots.py
(+5 files in other folders)
