[project]
name = "work-activity-agent"
version = "0.1.0"
description = "AI агент анализа скриншотов из таск-трекера: оцифровка, классификация, risk score, work activity score"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "kerz-A", email = "kerovdm@gmail.com" }]
keywords = ["ai", "agent", "langgraph", "vision", "screenshot-analysis"]

dependencies = [
    "langgraph>=0.2.50",
    "langgraph-checkpoint-sqlite>=2.0",
    "litellm>=1.50",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "structlog>=24.4",
    "typer>=0.12",
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "presidio-image-redactor>=0.0.55",
    "imagehash>=4.3",
    "Pillow>=10.4",
    "tenacity>=9.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "hypothesis>=6.112",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
    "types-PyYAML>=6.0",
    "playwright>=1.47",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/work_activity_agent"]

[project.scripts]
work-activity-agent = "work_activity_agent.presentation.cli:app"

# ─── Ruff ────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle + pyflakes
    "I",                # isort
    "N",                # pep8-naming
    "B",                # bugbear
    "UP",               # pyupgrade
    "SIM",              # simplify
    "RUF",              # ruff-specific
    "ASYNC",            # async best practices
    "S",                # bandit security
    "T20",              # no print statements
    "TID",              # tidy imports
    "PT",               # pytest style
    "PIE",              # misc lints
]
ignore = [
    "S101",             # assert in tests is fine
    "E501",             # line length handled by formatter
    # Кириллические комментарии и строки — основной язык проекта
    "RUF001",           # ambiguous unicode in strings
    "RUF002",           # ambiguous unicode in docstrings
    "RUF003",           # ambiguous unicode in comments
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "PT011"]
"tools/**/*.py" = ["T20"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ─── MyPy ────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_reexport = true
plugins = ["pydantic.mypy"]
exclude = ["tools/", "tests/golden/"]

# Третьи стороны без типов — добавляем по мере необходимости
# [[tool.mypy.overrides]]
# module = ["some_lib.*"]
# ignore_missing_imports = true

# ─── Pytest ──────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "live_llm: requires real LLM API key (excluded by default)",
    "slow: slow tests",
    "integration: integration tests",
]
addopts = [
    "--strict-markers",
    "-ra",
    "--cov=src/work_activity_agent",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "-m", "not live_llm",
]

[tool.coverage.run]
source = ["src/work_activity_agent"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@overload",
]
show_missing = true
skip_covered = false
